# plotter

./: .gitignore  README.md  pyproject.toml
src/plotter/: __init__.py  base.py  grid.py  multiplot.py  plot.py  style.py  utils.py
src/plotter/core/: base.py  drawable.py  grid.py  multiplot.py  plot.py
tests/: test_grid.py  test_lineplot.py  test_multiplot.py  test_plot.py
